// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders 1`] = `
<div
  className="box xsDisplayBlock"
>
  <div
    aria-label="This is a tooltip"
    className="box"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div>
      Hi
    </div>
  </div>
</div>
`;

exports[`Tooltip renders the link when hovered 1`] = `
<div
  class="box xsDisplayBlock"
>
  <div
    aria-label="This is a tooltip"
    class="box"
  >
    <div>
      Hi
    </div>
  </div>
</div>
`;

exports[`Tooltip renders with idealDirection 1`] = `
<div
  className="box xsDisplayBlock"
>
  <div
    aria-label="This is a tooltip"
    className="box"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div>
      Hi
    </div>
  </div>
</div>
`;
